[package]
name = "libfuse-sys"
version = "0.1.0"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
edition = "2018"

[dependencies]
libc = "*"

[build-dependencies]
bindgen = "0.52"
pkg-config = "0.3"

[features]
default = []

fuse_11 = []
fuse_21 = []
fuse_22 = []
fuse_25 = []
fuse_26 = []
fuse_29 = []
fuse_30 = []
fuse_31 = []
fuse_35 = []
