[package]
name = "libfuse-sys"
version = "0.1.0"
description = "Raw bindings to libfuse"
repository = "https://github.com/richard-w/libfuse-sys"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
license = "MIT AND LGPL-2.0-or-later"
categories = ["external-ffi-bindings"]
keywords = ["fuse", "bindings", "filesystem", "fs"]
readme = "README.md"
edition = "2018"
build = "build.rs"

[dependencies]
libc = "*"

[build-dependencies]
bindgen = "0.52"
pkg-config = "0.3"

[features]
default = []

fuse_11 = []
fuse_21 = []
fuse_22 = []
fuse_25 = []
fuse_26 = []
fuse_29 = []
fuse_30 = []
fuse_31 = []
fuse_35 = []
